--- a/src/history.html
+++ b/src/history.html
@@ -92,53 +92,67 @@
         <!-- Timeline -->
         <div class="timeline">
 
-          <!-- 第 13 屆 (2024) -->
+          <!-- 第 3 屆 (2024) -->
           <div class="timeline-item" data-aos="fade-up" data-aos-delay="100">
             <div class="timeline-marker"></div>
             <div class="timeline-content">
-              <h3 class="timeline-title">第 13 屆幹部團隊</h3>
-              <span class="timeline-year">2024 - 現在</span>
+              <h3 class="timeline-title">第 3 屆幹部團隊</h3>
+              <span class="timeline-year">2025 - 2026</span>
               <div class="row mt-3">
                 <div class="col-md-4 col-6 mb-3">
                   <div class="officer-card">
-                    <h5>楊智宇</h5>
-                    <span>社長</span>
-                    <p class="small">通訊工程學系</p>
-                  </div>
-                </div>
-                <div class="col-md-4 col-6 mb-3">
-                  <div class="officer-card">
-                    <h5>黃曦樂</h5>
-                    <span>副社長</span>
+                    <h5>黃正安</h5>
+                    <span>社長/公關</span>
                     <p class="small">企業管理學系</p>
                   </div>
                 </div>
                 <div class="col-md-4 col-6 mb-3">
                   <div class="officer-card">
-                    <h5>王亮崎</h5>
-                    <span>公關長</span>
-                    <p class="small">資訊工程學系</p>
+                    <h5>林瑜柔</h5>
+                    <span>副社長/教學長</span>
+                    <p class="small">企業管理學系</p>
                   </div>
                 </div>
                 <div class="col-md-4 col-6 mb-3">
                   <div class="officer-card">
-                    <h5>陳宥廷</h5>
-                    <span>教學長</span>
-                    <p class="small">化學工程學系</p>
+                    <h5>施詠頡</h5>
+                    <span>行政長</span>
+                    <p class="small">生命科學系</p>
                   </div>
                 </div>
                 <div class="col-md-4 col-6 mb-3">
                   <div class="officer-card">
-                    <h5>李雨璇</h5>
-                    <span>活動長</span>
-                    <p class="small">財務金融學系</p>
+                    <h5>羅研安</h5>
+                    <span>行政/財務長</span>
+                    <p class="small">企業管理學系</p>
                   </div>
                 </div>
                 <div class="col-md-4 col-6 mb-3">
                   <div class="officer-card">
-                    <h5>張承翰</h5>
+                    <h5>廖恩若</h5>
+                    <span>美宣長</span>
+                    <p class="small">企業管理學系</p>
+                  </div>
+                </div>
+                <div class="col-md-4 col-6 mb-3">
+                  <div class="officer-card">
+                    <h5>陳旻偉</h5>
                     <span>器材長</span>
-                    <p class="small">機械工程學系</p>
+                    <p class="small">通訊工程博士班</p>
+                  </div>
+                </div>
+                <div class="col-md-4 col-6 mb-3">
+                  <div class="officer-card">
+                    <h5>楊智宇</h5>
+                    <span>顧問</span>
+                    <p class="small">資訊電機學院學士班</p>
+                  </div>
+                </div>
+                <div class="col-md-4 col-6 mb-3">
+                  <div class="officer-card">
+                    <h5>黃曦樂</h5>
+                    <span>顧問</span>
+                    <p class="small">資訊工程碩士班</p>
                   </div>
                 </div>
               </div>
@@ -154,32 +168,67 @@
             </div>
           </div>
 
-          <!-- 第 12 屆 (2023) -->
+          <!-- 第 2 屆 (2024) -->
           <div class="timeline-item" data-aos="fade-up" data-aos-delay="200">
             <div class="timeline-marker"></div>
             <div class="timeline-content">
-              <h3 class="timeline-title">第 12 屆幹部團隊</h3>
-              <span class="timeline-year">2023 - 2024</span>
+              <h3 class="timeline-title">第 2 屆幹部團隊</h3>
+              <span class="timeline-year">2024 - 2025</span>
               <div class="row mt-3">
                 <div class="col-md-4 col-6 mb-3">
                   <div class="officer-card">
-                    <h5>林冠宇</h5>
+                    <h5>張芷榕</h5>
                     <span>社長</span>
-                    <p class="small">資訊管理學系</p>
-                  </div>
-                </div>
-                <div class="col-md-4 col-6 mb-3">
-                  <div class="officer-card">
-                    <h5>陳思涵</h5>
-                    <span>副社長</span>
                     <p class="small">企業管理學系</p>
                   </div>
                 </div>
                 <div class="col-md-4 col-6 mb-3">
                   <div class="officer-card">
-                    <h5>張育誠</h5>
+                    <h5>黃曦樂</h5>
+                    <span>副社長</span>
+                    <p class="small">資訊工程學系</p>
+                  </div>
+                </div>
+                <div class="col-md-4 col-6 mb-3">
+                  <div class="officer-card">
+                    <h5>王亮崎</h5>
                     <span>教學長</span>
-                    <p class="small">化學工程學系</p>
+                    <p class="small">電機工程學系</p>
+                  </div>
+                </div>
+                <div class="col-md-4 col-6 mb-3">
+                  <div class="officer-card">
+                    <h5>徐聖崴</h5>
+                    <span>教學長</span>
+                    <p class="small">電機工程學系</p>
+                  </div>
+                </div>
+                <div class="col-md-4 col-6 mb-3">
+                  <div class="officer-card">
+                    <h5>劉語涵</h5>
+                    <span>公關長</span>
+                    <p class="small">企業管理學系</p>
+                  </div>
+                </div>
+                <div class="col-md-4 col-6 mb-3">
+                  <div class="officer-card">
+                    <h5>陳柏霖</h5>
+                    <span>器材長</span>
+                    <p class="small">客家語文暨社會科學系</p>
+                  </div>
+                </div>
+                <div class="col-md-4 col-6 mb-3">
+                  <div class="officer-card">
+                    <h5>駱歆文</h5>
+                    <span>美宣長</span>
+                    <p class="small">企業管理學系</p>
+                  </div>
+                </div>
+                <div class="col-md-4 col-6 mb-3">
+                  <div class="officer-card">
+                    <h5>孔祥儀</h5>
+                    <span>行政長</span>
+                    <p class="small">企業管理學系</p>
                   </div>
                 </div>
               </div>
@@ -188,45 +237,57 @@
                 <ul>
                   <li>建立系統化的調酒教學課程</li>
                   <li>舉辦首次校外合作活動</li>
-                  <li>擴大社員規模至 60+ 人</li>
                 </ul>
               </div>
             </div>
           </div>
 
-          <!-- 第 11 屆 (2022) -->
+          <!-- 第 1 屆 (2024) -->
           <div class="timeline-item" data-aos="fade-up" data-aos-delay="300">
             <div class="timeline-marker"></div>
             <div class="timeline-content">
-              <h3 class="timeline-title">第 11 屆幹部團隊</h3>
-              <span class="timeline-year">2022 - 2023</span>
+              <h3 class="timeline-title">第 1 屆創社幹部團隊</h3>
+              <span class="timeline-year">2023 - 2024</span>
               <div class="row mt-3">
                 <div class="col-md-4 col-6 mb-3">
                   <div class="officer-card">
-                    <h5>劉志豪</h5>
+                    <h5>楊智宇</h5>
                     <span>社長</span>
-                    <p class="small">機械工程學系</p>
+                    <p class="small">資訊電機學院學士班</p>
                   </div>
                 </div>
                 <div class="col-md-4 col-6 mb-3">
                   <div class="officer-card">
-                    <h5>吳佳穎</h5>
+                    <h5>黃曦樂</h5>
                     <span>副社長</span>
-                    <p class="small">財務金融學系</p>
+                    <p class="small">資訊工程學系</p>
                   </div>
                 </div>
                 <div class="col-md-4 col-6 mb-3">
                   <div class="officer-card">
-                    <h5>許家豪</h5>
-                    <span>活動長</span>
-                    <p class="small">電機工程學系</p>
+                    <h5>藍璟善</h5>
+                    <span>美宣長</span>
+                    <p class="small">法國語文學系</p>
+                  </div>
+                </div>
+                <div class="col-md-4 col-6 mb-3">
+                  <div class="officer-card">
+                    <h5>朱芮儀</h5>
+                    <span>行政長</span>
+                    <p class="small">資訊管理學系</p>
+                  </div>
+                </div>
+                <div class="col-md-4 col-6 mb-3">
+                  <div class="officer-card">
+                    <h5>張芷榕</h5>
+                    <span>公關長</span>
+                    <p class="small">企業管理學系</p>
                   </div>
                 </div>
               </div>
               <div class="achievements">
                 <h6>主要成就：</h6>
                 <ul>
-                  <li>疫情後復辦實體社課</li>
                   <li>引入分子調酒技術</li>
                   <li>建立器材管理系統</li>
                 </ul>
@@ -239,15 +300,15 @@
             <div class="timeline-marker timeline-marker-special"></div>
             <div class="timeline-content">
               <h3 class="timeline-title">社團成立</h3>
-              <span class="timeline-year">2012</span>
+              <span class="timeline-year">2023</span>
               <div class="founding-story">
                 <p>
-                  「分子創意飲品研究社」於 2012 年由一群熱愛調酒的中央大學學生創立。
+                  「分子創意飲品研究社」於 2023 年由一群熱愛調酒的中央大學學生創立。
                   我們的使命是將調酒從單純的技術提升為一門藝術，結合科學知識與創意思維，
                   探索飲品製作的無限可能。
                 </p>
                 <p>
-                  經過 12 年的發展，我們從最初的十幾位成員成長為擁有數十位活躍成員的大型社團，
+                  經過 3 年的發展，我們從最初的十幾位成員成長為擁有數十位活躍成員的大型社團，
                   不僅在校內舉辦各種活動，更積極參與校外音樂祭與合作項目，
                   成為中央大學最具特色的學生社團之一。
                 </p>
