--- a/src/index.html
+++ b/src/index.html
@@ -543,7 +543,7 @@
                 <div class="member-info-content">
                   <h4>楊智宇</h4>
                   <span>社長 | 首席調酒師</span>
-                  <p style="font-size: 0.9em; margin-top: 10px; color: #fff;">通訊工程學系 | 調酒經驗 3 年<br>擅長經典調酒與創意特調</p>
+                  <p style="font-size: 0.9em; margin-top: 10px; color: #fff;">資訊電機學院學士班 | 調酒經驗 3 年<br>擅長經典調酒與創意特調</p>
                 </div>
                 <div class="social">
                   <a href="https://www.facebook.com/profile.php?id=100012629161826"><i class="bi bi-facebook"></i></a>
@@ -562,7 +562,7 @@
                 <div class="member-info-content">
                   <h4>黃曦樂</h4>
                   <span>副社長 | 活動總監</span>
-                  <p style="font-size: 0.9em; margin-top: 10px; color: #fff;">企業管理學系 | 調酒經驗 2 年<br>負責活動策劃與外部合作</p>
+                  <p style="font-size: 0.9em; margin-top: 10px; color: #fff;">資訊工程學系 | 調酒經驗 2 年<br>負責活動策劃與外部合作</p>
                 </div>
                 <div class="social">
                   <a href="#"><i class="bi bi-instagram"></i></a>
@@ -579,7 +579,7 @@
                 <div class="member-info-content">
                   <h4>王亮崎</h4>
                   <span>公關長 | 調酒講師</span>
-                  <p style="font-size: 0.9em; margin-top: 10px; color: #fff;">資訊工程學系 | 調酒經驗 2 年<br>擅長教學與分子調酒技術</p>
+                  <p style="font-size: 0.9em; margin-top: 10px; color: #fff;">電機工程學系 | 調酒經驗 2 年<br>擅長教學與分子調酒技術</p>
                 </div>
                 <div class="social">
                   <a href="#"><i class="bi bi-instagram"></i></a>
@@ -588,43 +588,84 @@
             </div>
           </div>
 
-          <!-- 教學長 -->
-          <div class="col-lg-4 col-md-6">
-            <div class="member" data-aos="zoom-in" data-aos-delay="400">
-              <img src="assets/img/chefs/chefs-1.jpg" class="img-fluid" alt="教學長">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>陳宥廷</h4>
-                  <span>教學長 | 課程規劃</span>
-                  <p style="font-size: 0.9em; margin-top: 10px; color: #fff;">化學工程學系 | 調酒經驗 2 年<br>專精分子調酒與實驗技法</p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- 活動長 -->
-          <div class="col-lg-4 col-md-6">
-            <div class="member" data-aos="zoom-in" data-aos-delay="500">
-              <img src="assets/img/chefs/chefs-2.jpg" class="img-fluid" alt="活動長">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>李雨璇</h4>
-                  <span>活動長 | 活動執行</span>
-                  <p style="font-size: 0.9em; margin-top: 10px; color: #fff;">財務金融學系 | 調酒經驗 1 年<br>負責社團活動執行與規劃</p>
-                </div>
-              </div>
-            </div>
-          </div>
-
           <!-- 器材長 -->
           <div class="col-lg-4 col-md-6">
-            <div class="member" data-aos="zoom-in" data-aos-delay="600">
-              <img src="assets/img/chefs/chefs-3.jpg" class="img-fluid" alt="器材長">
+            <div class="member" data-aos="zoom-in" data-aos-delay="400">
+              <img src="assets/img/chefs/min.jpg" class="img-fluid" alt="教學長">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>張承翰</h4>
-                  <span>器材長 | 設備管理</span>
-                  <p style="font-size: 0.9em; margin-top: 10px; color: #fff;">機械工程學系 | 調酒經驗 1 年<br>負責器材維護與採購</p>
+                  <h4>陳旻偉</h4>
+                  <span>器材長 | 器材管理</span>
+                  <p style="font-size: 0.9em; margin-top: 10px; color: #fff;">通訊工程學系 | 最高學歷的幹部</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- 行政長 -->
+          <div class="col-lg-4 col-md-6">
+            <div class="member" data-aos="zoom-in" data-aos-delay="500">
+              <img src="assets/img/chefs/yann.jpg" class="img-fluid" alt="行政長">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>羅研安</h4>
+                  <span>行政長 | 財務與學校文書</span>
+                  <p style="font-size: 0.9em; margin-top: 10px; color: #fff;">企業管理學系</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- 公關長 -->
+          <div class="col-lg-4 col-md-6">
+            <div class="member" data-aos="zoom-in" data-aos-delay="600">
+              <img src="assets/img/chefs/ann.jpg" class="img-fluid" alt="公關長">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>黃正安</h4>
+                  <span>公關長 | 社團公關</span>
+                  <p style="font-size: 0.9em; margin-top: 10px; color: #fff;">企業管理學系</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- 行政長 -->
+          <div class="col-lg-4 col-md-6">
+            <div class="member" data-aos="zoom-in" data-aos-delay="600">
+              <img src="assets/img/chefs/jayy.jpg" class="img-fluid" alt="行政長">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>施詠頡</h4>
+                  <span>行政長 | 行政財務</span>
+                  <p style="font-size: 0.9em; margin-top: 10px; color: #fff;">企業管理學系</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- 美宣長 -->
+          <div class="col-lg-4 col-md-6">
+            <div class="member" data-aos="zoom-in" data-aos-delay="600">
+              <img src="assets/img/chefs/mia.jpg" class="img-fluid" alt="美宣長">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>廖恩若</h4>
+                  <span>美宣長 | 美宣製圖</span>
+                  <p style="font-size: 0.9em; margin-top: 10px; color: #fff;">企業管理學系</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 教學長 -->
+          <div class="col-lg-4 col-md-6">
+            <div class="member" data-aos="zoom-in" data-aos-delay="600">
+              <img src="assets/img/chefs/fish.jpg" class="img-fluid" alt="教學長">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>林瑜柔</h4>
+                  <span>教學長 | 教學與社師</span>
+                  <p style="font-size: 0.9em; margin-top: 10px; color: #fff;">企業管理學系</p>
                 </div>
               </div>
             </div>
