Change some error msg

--- a/src/index.html
+++ b/src/index.html
@@ -542,13 +542,11 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>楊智宇</h4>
-                  <span>社長 | 首席調酒師</span>
+                  <span>史前時代首席調酒師</span>
                   <p style="font-size: 0.9em; margin-top: 10px; color: #fff;">資訊電機學院學士班 | 調酒經驗 3 年<br>擅長經典調酒與創意特調</p>
                 </div>
                 <div class="social">
-                  <a href="https://www.facebook.com/profile.php?id=100012629161826"><i class="bi bi-facebook"></i></a>
                   <a href="https://www.instagram.com/cake11298/"><i class="bi bi-instagram"></i></a>
-                  <a href="https://www.linkedin.com/in/%E6%99%BA%E5%AE%87-%E6%A5%8A-04562724a/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
@@ -561,7 +559,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>黃曦樂</h4>
-                  <span>副社長 | 活動總監</span>
+                  <span>史前時代 活動總監 威士忌消耗王</span>
                   <p style="font-size: 0.9em; margin-top: 10px; color: #fff;">資訊工程學系 | 調酒經驗 2 年<br>負責活動策劃與外部合作</p>
                 </div>
                 <div class="social">
@@ -816,7 +814,7 @@
       "gallery.label": "展示",
       "gallery.title": "曾經的活動",
       "chefs.label": "社團幹部",
-      "chefs.title": "第 13 屆分子創意飲品研究社幹部團隊",
+      "chefs.title": "歷屆調酒社豪傑",
       "contact.label": "聯絡",
       "contact.title": "聯絡我們",
       "contact.org": "國立中央大學 調酒社 (分子創意飲品研究社)",
