Change some context

--- a/src/index.html
+++ b/src/index.html
@@ -530,7 +530,7 @@
 
         <div class="section-title">
           <h2 data-i18n="chefs.label">社團幹部</h2>
-          <p data-i18n="chefs.title">第 13 屆分子創意飲品研究社幹部團隊</p>
+          <p data-i18n="chefs.title">歷屆調酒社幹部豪傑</p>
         </div>
 
         <div class="row">
@@ -814,7 +814,7 @@
       "gallery.label": "展示",
       "gallery.title": "曾經的活動",
       "chefs.label": "社團幹部",
-      "chefs.title": "歷屆調酒社豪傑",
+      "chefs.title": "歷屆調酒社幹部豪傑",
       "contact.label": "聯絡",
       "contact.title": "聯絡我們",
       "contact.org": "國立中央大學 調酒社 (分子創意飲品研究社)",
